--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>SegmentEditor</title>
+    <title>CookBook</title>
+    <!-- build:css -->
+    <!-- endbuild -->
     <link rel="stylesheet" href="./css/app.css"/>
 </head>
 <body ng-app="baseProject">
